@@ -1,5 +1,6 @@
 package com.ssafy.singsongsangsong.config;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.context.annotation.Bean;
@@ -14,11 +15,13 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.logout.LogoutFilter;
+import org.springframework.security.web.session.SessionManagementFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.ssafy.singsongsangsong.filter.CorsFilter;
 import com.ssafy.singsongsangsong.filter.CustomJsonUsernamePasswordAuthenticationFilter;
 import com.ssafy.singsongsangsong.filter.JwtAuthenticationProcessingFilter;
 import com.ssafy.singsongsangsong.handler.OAuth2LoginFailureHandler;
@@ -40,12 +43,14 @@ public class SecurityConfig {
 	private final OAuth2LoginFailureHandler oAuth2LoginFailureHandler;
 	private final CustomOAuth2UserService customOAuth2UserService;
 	private final JwtAuthenticationProcessingFilter jwtAuthenticationProcessingFilter;
+	private final CorsFilter corsFilter;
 	private final PasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
 
 	@Bean
 	public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 		http
-			.cors(auth -> auth.disable())
+			.cors(cors -> cors.configurationSource(corsConfigurationSource()))
+			// .cors(cors -> cors.disable())
 			.formLogin(auth -> auth.disable())
 			.csrf(auth -> auth.disable())
 			.httpBasic(auth -> auth.disable())
@@ -63,7 +68,8 @@ public class SecurityConfig {
 					.userInfoEndpoint(userInfo -> userInfo
 						.userService(customOAuth2UserService)))
 			.addFilterAfter(customJsonUsernamePasswordAuthenticationFilter(), LogoutFilter.class)
-			.addFilterBefore(jwtAuthenticationProcessingFilter, CustomJsonUsernamePasswordAuthenticationFilter.class);
+			.addFilterBefore(jwtAuthenticationProcessingFilter, CustomJsonUsernamePasswordAuthenticationFilter.class)
+			.addFilterBefore(corsFilter, SessionManagementFilter.class);
 
 		return http.build();
 	}
@@ -85,15 +91,15 @@ public class SecurityConfig {
 
 	@Bean
 	public CorsConfigurationSource corsConfigurationSource() {
-		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(
-			List.of("http://localhost:5173", "http://i10e102.p.ssafy.io:5173", "https://i10e102.p.ssafy.io:5173", "http://localhost:5173"));
-		configuration.addAllowedMethod("*");
-		configuration.addAllowedHeader("*");
-		configuration.setAllowCredentials(true);
+		CorsConfiguration config = new CorsConfiguration();
+
+		config.setAllowCredentials(true);
+		config.setAllowedOriginPatterns(Arrays.asList("http://localhost:3000","https://api.singsongsangsong.com","https://www.singsongsangsong.com"));
+		config.setAllowedMethods(Arrays.asList("HEAD","POST","GET","DELETE","PUT"));
+		config.setAllowedHeaders(Arrays.asList("*"));
 
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-		source.registerCorsConfiguration("/**", configuration);
+		source.registerCorsConfiguration("/**", config);
 		return source;
 	}
 }
